--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Olá</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Neuroverse - Database de Heróis Autistas</title>
+    <link rel="stylesheet" href="styles.css"> 
+</head>
+<body>
+    <script src="script.js"></script>
+    
+    <header>
+        <h1>Neuroverse</h1>
+        <p>Database de Heróis Autistas</p>
+    </header>
+
+    <div class="div1">
+        <nav>
+            <button id="btn1" class="hero_btn"></button>
+            <button id="btn2" class="hero_btn"></button>
+            <button id="btn3" class="hero_btn"></button>
+            <button id="btn4" class="hero_btn"></button>
+            <button id="btn5" class="hero_btn"></button>
+        </nav>
+    </div>
+
+    <div class="div2">
+        <h2>Sinestesia</h2>
+        <img src="sinestesia.jpg" alt="Imagem de Sinestesia">
+    </div>
+
+    <div class="div3">
+        <p>ID: 001</p>
+        <p>Poder: Consegue manipular os sentidos de quem está à sua volta...</p>
+        <p>Marina tinha uma forma única de perceber o mundo. Ela não só ouvia sons, mas também os via como cores vibrantes...</p>
+    </div>
+</body>
+</html>
