Mais de 5 herois possiveis

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
                 <button id="btn3" class="hero_btn"></button>
                 <button id="btn4" class="hero_btn"></button>
                 <button id="btn5" class="hero_btn"></button>
+                <div class="pageSelectors">
+                    <button id="btnPrev">Anterior</button>
+                    <div id="page">1</div>
+                    <button id="btnNext">Próxima</button>
+                </div>
             </nav>
         </div>
     
