--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-        <img id="logo" src="heroes/images/logo.png">
+        <img id="logo" src="logo.png">
         <div id="description">
             <div id="leftDescription">
                 <h3>Missão</h3>
